--- a/src/style/index.css
+++ b/src/style/index.css
@@ -71,8 +71,12 @@ section.banner {
 }
 
 .logo img {
-  width: 200px;
+  height: 80px;
   padding: 20px 0px;
+}
+
+.logo {
+  height: 120px;
 }
 
 header .container {
