--- a/src/style/banner.css
+++ b/src/style/banner.css
@@ -11,7 +11,7 @@ section.banner {
 }
 
 section.banner .container {
-  margin: 30px 0px;
+  margin: 10px 0px 40px 0px;
 }
 
 img.image-jeu {
@@ -61,9 +61,9 @@ img.image-jeu {
 }
 
 .button-partie {
-  width: 160px;
+  width: 200px;
   margin: 35px auto;
-  height: 30px;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -83,5 +83,32 @@ img.image-jeu {
   text-decoration: none;
   text-transform: uppercase;
   color: white;
-  font-size: 0.7em;
+  font-size: 1em;
+}
+
+@media screen and (min-width: 550px) {
+  section.banner .container {
+    justify-content: center;
+    display: flex;
+  }
+
+  img.image-jeu {
+    margin: 0px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .banner-information p {
+    font-size: 1em;
+  }
+
+  .button-partie a {
+    color: white;
+    font-size: 1em;
+  }
+
+  .button-partie {
+    width: 250px;
+    height: 50px;
+  }
 }
