--- a/src/style/header.css
+++ b/src/style/header.css
@@ -4,6 +4,12 @@ footer {
   background-color: #202225;
 }
 
+header,
+footer {
+  max-width: 1040px;
+  margin: 0 auto;
+}
+
 .logo {
   display: flex;
 }
@@ -44,7 +50,7 @@ section.banner {
 }
 
 .logo-image {
-  width: 90%;
+  width: 80%;
   display: inline-block;
 }
 
@@ -110,5 +116,33 @@ header .boulet {
   }
   .logo {
     height: auto;
+  }
+}
+
+@media screen and (min-width: 850px) {
+  .logo-image {
+    width: 60%;
+  }
+  .logo {
+    height: 240px;
+  }
+
+  #boulet1 {
+    width: auto;
+  }
+
+  #boulet2 {
+    width: auto;
+  }
+
+  #boulet1 {
+    left: 100px;
+    z-index: 0;
+  }
+
+  #boulet2 {
+    right: 125px;
+    top: 30px;
+    z-index: 3;
   }
 }
