--- a/src/style/index.css
+++ b/src/style/index.css
@@ -31,6 +31,11 @@ h2 {
   overflow: hidden;
 }
 
+main {
+  max-width: 1040px;
+  margin: 0 auto;
+}
+
 footer p {
   text-align: center;
   color: white;
