--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,6 +2,7 @@
 @import url("./header.css");
 @import url("./banner.css");
 @import url("./features.css");
+@import url("./preview.css");
 
 body {
   margin: 0px;
